[gd_scene load_steps=34 format=3 uid="uid://yna85oredyjc"]

[ext_resource type="Script" uid="uid://cga31f181wc0b" path="res://scripts/all/dialog.gd" id="1_r8cnc"]
[ext_resource type="Texture2D" uid="uid://dfns6sxhh0miv" path="res://assets/dialog/box.png" id="1_wb4t7"]
[ext_resource type="Texture2D" uid="uid://c47kjyld48n6g" path="res://assets/dialog/face.png" id="2_dthu0"]
[ext_resource type="FontFile" uid="uid://ctmmhebl66ho7" path="res://assets/fonts/OMORI_GAME.ttf" id="3_1raxn"]
[ext_resource type="Texture2D" uid="uid://c7nlbjd1tfuxy" path="res://assets/dialog/name.png" id="3_dthu0"]
[ext_resource type="FontFile" uid="uid://bxm5isfgrapdr" path="res://assets/fonts/OMORI_GAME2.ttf" id="4_avhl4"]
[ext_resource type="Shader" uid="uid://d2ybshoc82nm5" path="res://shaders/bounce_sideways.gdshader" id="7_rmnu3"]
[ext_resource type="Texture2D" uid="uid://chqwuceqapdr8" path="res://ui/redPointerRight.png" id="8_r8cnc"]
[ext_resource type="AudioStream" uid="uid://cubwic0h18xco" path="res://audio/tiles/SYS_text.ogg" id="10_18a35"]
[ext_resource type="AudioStream" uid="uid://65orjmpikthe" path="res://audio/sfx/SYS_select.ogg" id="11_jskuq"]
[ext_resource type="AudioStream" uid="uid://cupcm6b43tktv" path="res://audio/sfx/SYS_cursor1.ogg" id="12_envwf"]

[sub_resource type="LabelSettings" id="LabelSettings_1raxn"]
font = ExtResource("4_avhl4")
font_size = 34
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jskuq"]
load_path = "res://.godot/imported/name.png-c5be72eaf77deb33a99c45e242320dd4.ctex"

[sub_resource type="Animation" id="Animation_4sst1"]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextBox/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.093572, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_20f04"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextBox/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1s2l"]
_data = {
&"RESET": SubResource("Animation_20f04"),
&"show": SubResource("Animation_4sst1")
}

[sub_resource type="Animation" id="Animation_22634"]
resource_name = "show"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/Name:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0951947, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bd80k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/Name:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sst1"]
_data = {
&"RESET": SubResource("Animation_bd80k"),
&"show": SubResource("Animation_22634")
}

[sub_resource type="Animation" id="Animation_jskuq"]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FaceBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FaceBox/Container/Face:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0984399, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_56cs2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FaceBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FaceBox/Container/Face:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22634"]
_data = {
&"RESET": SubResource("Animation_56cs2"),
&"show": SubResource("Animation_jskuq")
}

[sub_resource type="Animation" id="Animation_seigx"]
resource_name = "show"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Choices:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x6nbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Choices:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bd80k"]
_data = {
&"RESET": SubResource("Animation_x6nbt"),
&"show": SubResource("Animation_seigx")
}

[sub_resource type="Animation" id="Animation_di16t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FaceBox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextBox/Text:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FaceBox/Container/Face:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer/HBoxContainer/Name:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cursor:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Choices:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}

[sub_resource type="Animation" id="Animation_r8cnc"]
resource_name = "showBox"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextBox/Text:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/HBoxContainer/Name:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cursor:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_envwf"]
resource_name = "showBoxChoices"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextBox/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cursor:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Choices:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_gt3hk"]
resource_name = "showBoxChoicesName"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextBox/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cursor:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Choices:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/HBoxContainer/Name:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0911356, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_1raxn"]
resource_name = "showBoxFace"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FaceBox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextBox/Text:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FaceBox/Container/Face:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer/HBoxContainer/Name:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Cursor:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_18a35"]
resource_name = "showBoxNoName"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextBox:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextBox/Text:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0963755, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cursor:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnnqv"]
_data = {
&"RESET": SubResource("Animation_di16t"),
&"showBox": SubResource("Animation_r8cnc"),
&"showBoxChoices": SubResource("Animation_envwf"),
&"showBoxChoicesName": SubResource("Animation_gt3hk"),
&"showBoxFace": SubResource("Animation_1raxn"),
&"showBoxNoName": SubResource("Animation_18a35")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18a35"]
shader = ExtResource("7_rmnu3")

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_r8cnc")

[node name="TextBox" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 1
offset_left = 16.0
offset_top = 352.0
offset_right = 624.0
offset_bottom = 464.0
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(0, 56)
texture = ExtResource("1_wb4t7")

[node name="Text" type="RichTextLabel" parent="TextBox"]
visible = false
clip_contents = false
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 598.0
offset_bottom = 94.0
theme_override_fonts/normal_font = ExtResource("4_avhl4")
theme_override_fonts/italics_font = ExtResource("3_1raxn")
theme_override_font_sizes/italics_font_size = 27
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "[color=orange]IMPORTANT ITEMS[/color] [color=purple]CHARMS[/color] [color=lime_green]SNACKS[/color] effects:    [pulse]Pulse[/pulse]    [wave]Wave[/wave]    [tornado]Tornado[/tornado] [shake]Shake[/shake]    [fade start=75 length=7]Fade[/fade]    [rainbow]Rainbow[/rainbow]"
fit_content = true
scroll_active = false

[node name="FaceBox" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 234.0
offset_right = 624.0
offset_bottom = 348.0
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(0, 57)
texture = ExtResource("2_dthu0")

[node name="Container" type="ColorRect" parent="FaceBox"]
clip_contents = true
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 110.0
offset_bottom = 110.0
color = Color(0, 0, 0, 0)

[node name="Face" type="TextureRect" parent="FaceBox/Container"]
visible = false
layout_mode = 2
offset_top = 1.0
offset_right = 900.0
offset_bottom = 901.0
scale = Vector2(0.117, 0.117)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(24, 44)
layout_mode = 0
offset_left = 16.0
offset_top = 304.0
offset_right = 68.0
offset_bottom = 348.0
scale = Vector2(1, 1e-05)
pivot_offset = Vector2(0, 22)

[node name="NameBox" type="NinePatchRect" parent="MarginContainer"]
custom_minimum_size = Vector2(24, 44)
layout_mode = 2
texture = ExtResource("3_dthu0")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftSpacer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(24, 44)
layout_mode = 2
label_settings = SubResource("LabelSettings_1raxn")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="RightSpacer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Choices" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(24, 44)
layout_mode = 1
anchors_preset = -1
anchor_left = 15.6
anchor_top = 8.7
anchor_right = 15.6
anchor_bottom = 8.7
offset_left = -24.0
offset_top = -44.0
offset_bottom = -3.05176e-05
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1, 1e-05)

[node name="NameBox" type="NinePatchRect" parent="Choices"]
custom_minimum_size = Vector2(24, 44)
layout_mode = 2
texture = SubResource("CompressedTexture2D_jskuq")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Choices"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="TopSpacer" type="MarginContainer" parent="Choices/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="BottomSpacer" type="MarginContainer" parent="Choices/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="BoxAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o1s2l")
}

[node name="NameAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4sst1")
}

[node name="FaceAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_22634")
}

[node name="ChoiceAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bd80k")
}

[node name="DialogAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qnnqv")
}

[node name="Cursor" type="Sprite2D" parent="."]
visible = false
z_index = 1
material = SubResource("ShaderMaterial_18a35")
position = Vector2(590, 447)
texture = ExtResource("8_r8cnc")

[node name="dialog" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_18a35")
bus = &"SFX"

[node name="extra" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_jskuq")
bus = &"SFX"

[node name="Move" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_envwf")
bus = &"SFX"
